# ezweb

./: .gitignore  LICENSE  README.md  __init__.py  crawl_utils.py  exceptions.py  main.py  pyproject.toml  requirements.txt  setup.cfg  text_process_utils.py  utils.py
dist_test/: ezweb_pkg_mdmomeni-0.0.1-py3-none-any.whl
docs/source/: index.md
ezweb/utils/: http.py  souphelper.py  text.py
objects/: __init__.py  page.py  soup.py
src/ezweb/: __init__.py
src/ezweb/objects/: __init__.py  product.py  soup.py  source.py
src/ezweb/utils/: http.py  io.py  souphelper.py  text.py
utils/: http.py  io.py  souphelper.py  text.py
