[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "4.5.0"
name = "ezweb"
authors = ["Momo <lo3me@proton.me>"]
description = "An easy to use web page analyzer (scraper or crawler) with many useful features and properties"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/rtcq/ezweb"
repository = "https://github.com/rtcq/ezweb"
keywords = ["web-scraping", "web-crawling", "text-mining"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: HTML",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rtcq/ezweb/issues"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
unidecode = "^1.3.6"
python-dateutil = "^2.8.2"
rapidfuzz = "^2.13.2"
readability-lxml = "^0.8.1"
trafilatura = "^1.4.0"
cached-property = "^1.5.2"
feedparser = "^6.0.10"

[tool.poetry.dev-dependencies]
lxml = { path = "lxml-4.9.0-cp311-cp311-win_amd64.whl" }
