[metadata]
name = ezweb
version = 1.0.0
author = Mohammad Momeni
author_email = mdmomeny@gmail.com
description = An easy to use web page analyzer (scraper or crawler) with many useful features and properties
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mdmomeni/ezweb
project_urls =
    Bug Tracker = https://github.com/mdmomeni/ezweb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    beautifulsoup4
    unidecode
    python-dateutil
    rapidfuzz
    readability-lxml
    trafilatura
    cached-property

[options.packages.find]
where = src